--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
-  "name": "c",
+  "name": "nbird",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "chart.js": "^2.5.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oluwadamilola/NBIRD.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/oluwadamilola/NBIRD/issues"
   },
-  "homepage": "https://github.com/oluwadamilola/NBIRD#readme"
+  "homepage": "https://github.com/oluwadamilola/NBIRD#readme",
+  "scripts": {
+    "start": "node ./bin/www",
+    "migrations": "knex migrate:latest",
+    "seed": "knex seed:run",
+    "setup": "npm run migrations && npm run seed"
+  },
+  "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "~1.17.1",
+    "client-sessions": "^0.8.0",
+    "debug": "~2.6.6",
+    "express": "~4.15.2",
+    "knex": "^0.12.9",
+    "morgan": "~1.8.1",
+    "nunjucks": "^3.0.0",
+    "serve-favicon": "~2.4.2",
+    "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^1.0.0",
+    "@types/body-parser": "^1.16.3",
+    "@types/express": "^4.0.35",
+    "@types/knex": "0.0.48",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.14",
+    "@types/nunjucks": "0.0.32",
+    "@types/serve-favicon": "^2.2.28",
+    "typescript": "^2.3.1"
+  }
 }
