--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "morgan": "~1.8.1",
     "nunjucks": "^3.0.0",
     "serve-favicon": "~2.4.2",
-    "sqlite3": "^3.1.8"
+    "socket.io": "^1.7.3",
+    "sqlite3": "^3.1.8",
+    "uws": "^0.14.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
@@ -37,6 +39,7 @@
     "@types/node": "^7.0.14",
     "@types/nunjucks": "0.0.32",
     "@types/serve-favicon": "^2.2.28",
+    "@types/socket.io": "^1.4.29",
     "typescript": "^2.3.1"
   }
 }
